modificacion y terminacion de la implementacion de mantenimiento de datos

--- a/proyect-ingweb/style/home.css
+++ b/proyect-ingweb/style/home.css
@@ -4,7 +4,7 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: #002966 !important;
+    background-color: #0e416b !important;
     font-family: 'poppins';
 }
 
