--- a/proyect-ingweb/views/products_manager/services/products_manager.css
+++ b/proyect-ingweb/views/products_manager/services/products_manager.css
@@ -8,6 +8,7 @@
   /* background-color: #1d6bdf !important; */
   font-family: 'poppins';
 }
+
 /* html{
 
   background-color: rgb(65, 164, 226);
@@ -21,9 +22,21 @@ h1 {
 
 }
 
+/* ====== NAV ====== */
+.navegador ul{
+
+list-style-type: none;
+text-align: center;
+
+}
+.li-link {
+  display: inline;
+}
+
+
 .form-title {
 
-  background-color: #1d6bdf;
+  background-color: #002966 !important;
   height: 17rem;
   margin-top: 0px;
 }
@@ -43,7 +56,7 @@ span {
 .col-md-5 {
   width: 30%;
   height: 400px;
-  margin: 80px 80px 40px 40px;
+  margin: 80px 20px 40px 40px;
   float: left;
 
 
@@ -114,40 +127,69 @@ span {
   font-size: 1rem;
 }
 
+/* boton se seleccionar */
+
+.btn-select {
+  background-color: rgb(239, 89, 89);
+  height: 45px;
+  width: 120px;
+  border: 0px solid black;
+  border-radius: 10px;
+  font-size: 1rem;
+}
+
+/* boton de borrar */
+
+.btn-errase {
+  background-color: rgb(77, 141, 214);
+  height: 45px;
+  width: 120px;
+  border: 0px solid black;
+  border-radius: 10px;
+  font-size: 1rem;
+}
 
 /* tabla */
 
-table{
+table {
 
-table-layout: fixed;
-width: 60%;
-border-collapse: collapse;
-border: 1px solid black; 
+  table-layout: auto;
+  width: 60%;
+  border-collapse: collapse;
+  border: 1px solid black;
+  border-radius: 20px;
 }
 
-thead th:nth-child(1){
+thead th:nth-child(1) {
   width: 7%;
 }
-thead th:nth-child(2){
-  width: 20%;
-}
-thead th:nth-child(3){
+
+thead th:nth-child(2) {
   width: 15%;
 }
-thead th:nth-child(4){
+
+thead th:nth-child(3) {
   width: 10%;
-}
-thead th:nth-child(5){
-  width: 10%;
-}
-thead th:nth-child(6){
-  width: 20%;
-}
-thead th:nth-child(7){
-  width: 18%;
 }
 
-th, td {
-padding: 20px;
-text-align: center;
+thead th:nth-child(4) {
+  width: 8%;
+}
+
+thead th:nth-child(5) {
+  width: 8%;
+}
+
+thead th:nth-child(6) {
+  width: 15%;
+}
+
+thead th:nth-child(7) {
+  width: 13%;
+}
+
+th,
+td {
+  padding: 20px;
+  text-align: center;
 }
