se agego el catalogo y se esta trabajando en el el registro de clientes

--- a/proyect-ingweb/style/products.css
+++ b/proyect-ingweb/style/products.css
@@ -3,7 +3,7 @@
 *{
     margin: 0;
     padding: 0;
-    background-color:  #002966!important;
+    background-color: #0e416b !important;
     font-family: 'Poppins', sans-serif;
 }
 
